prost-unwrap-proto-tests/tests/ui/with_struct_no_fields.stderr
error: Parameter must have 2 arguments
  --> tests/ui/with_struct_no_fields.rs:12:6
   |
12 |     .with_struct(A));
   |      ^^^^^^^^^^^
